Fixed chatbot + minor bugs in /auth
